fix too much space under the footer

--- a/frontend-service/src/App.module.css
+++ b/frontend-service/src/App.module.css
@@ -12,5 +12,6 @@ h2 {
 }
 .app {
   position: relative;
+  top: var(--header-height);
   min-height: calc(100vh - var(--header-height));
 }
