--- a/frontend-service/src/ui/views/_components/Layout/MainLayout/MainLayout.module.css
+++ b/frontend-service/src/ui/views/_components/Layout/MainLayout/MainLayout.module.css
@@ -1,5 +1,4 @@
 .mainContent {
-  margin-top: var(--header-height);
 }
 .disclaimer {
   padding: 0.5em;
